// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilesViewer tests <FilesViewer /> should render FilesViewer component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FilesViewer
    items={Array []}
    selected={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [],
      "className": "ecos-files-viewer",
    },
    "ref": null,
    "rendered": Array [],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [],
        "className": "ecos-files-viewer",
      },
      "ref": null,
      "rendered": Array [],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`FilesViewer tests <FilesViewerItem /> should render FilesViewerItem component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FilesViewerItem
    item={
      Object {
        "id": "",
        "title": "",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="ecos-files-viewer__item-left"
        >
          <div
            className="ecos-files-viewer__item-icon-wrapper"
          >
            <UNDEFINED
              className="ecos-files-viewer__item-icon"
              data={
                Object {
                  "value": "icon-custom-file-empty",
                }
              }
            />
          </div>
          <span
            className="ecos-files-viewer__item-title"
            title=""
          >
            
          </span>
        </div>,
        <div
          className="ecos-files-viewer__item-right"
        >
          <span
            className="ecos-files-viewer__item-modified"
            title="-"
          >
            -
          </span>
          <div
            className="ecos-files-viewer__item-actions"
          />
        </div>,
      ],
      "className": "ecos-files-viewer__item",
      "onClick": [Function],
      "onDoubleClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="ecos-files-viewer__item-icon-wrapper"
            >
              <UNDEFINED
                className="ecos-files-viewer__item-icon"
                data={
                  Object {
                    "value": "icon-custom-file-empty",
                  }
                }
              />
            </div>,
            <span
              className="ecos-files-viewer__item-title"
              title=""
            >
              
            </span>,
          ],
          "className": "ecos-files-viewer__item-left",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <UNDEFINED
                className="ecos-files-viewer__item-icon"
                data={
                  Object {
                    "value": "icon-custom-file-empty",
                  }
                }
              />,
              "className": "ecos-files-viewer__item-icon-wrapper",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": "ecos-files-viewer__item-icon",
                "data": Object {
                  "value": "icon-custom-file-empty",
                },
              },
              "ref": null,
              "rendered": null,
              "type": Object {
                "$$typeof": Symbol(react.memo),
                "compare": null,
                "type": [Function],
              },
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "",
              "className": "ecos-files-viewer__item-title",
              "title": "",
            },
            "ref": null,
            "rendered": "",
            "type": "span",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span
              className="ecos-files-viewer__item-modified"
              title="-"
            >
              -
            </span>,
            <div
              className="ecos-files-viewer__item-actions"
            />,
          ],
          "className": "ecos-files-viewer__item-right",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "-",
              "className": "ecos-files-viewer__item-modified",
              "title": "-",
            },
            "ref": null,
            "rendered": "-",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [],
              "className": "ecos-files-viewer__item-actions",
            },
            "ref": null,
            "rendered": Array [],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="ecos-files-viewer__item-left"
          >
            <div
              className="ecos-files-viewer__item-icon-wrapper"
            >
              <UNDEFINED
                className="ecos-files-viewer__item-icon"
                data={
                  Object {
                    "value": "icon-custom-file-empty",
                  }
                }
              />
            </div>
            <span
              className="ecos-files-viewer__item-title"
              title=""
            >
              
            </span>
          </div>,
          <div
            className="ecos-files-viewer__item-right"
          >
            <span
              className="ecos-files-viewer__item-modified"
              title="-"
            >
              -
            </span>
            <div
              className="ecos-files-viewer__item-actions"
            />
          </div>,
        ],
        "className": "ecos-files-viewer__item",
        "onClick": [Function],
        "onDoubleClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="ecos-files-viewer__item-icon-wrapper"
              >
                <UNDEFINED
                  className="ecos-files-viewer__item-icon"
                  data={
                    Object {
                      "value": "icon-custom-file-empty",
                    }
                  }
                />
              </div>,
              <span
                className="ecos-files-viewer__item-title"
                title=""
              >
                
              </span>,
            ],
            "className": "ecos-files-viewer__item-left",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <UNDEFINED
                  className="ecos-files-viewer__item-icon"
                  data={
                    Object {
                      "value": "icon-custom-file-empty",
                    }
                  }
                />,
                "className": "ecos-files-viewer__item-icon-wrapper",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "className": "ecos-files-viewer__item-icon",
                  "data": Object {
                    "value": "icon-custom-file-empty",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": Object {
                  "$$typeof": Symbol(react.memo),
                  "compare": null,
                  "type": [Function],
                },
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "",
                "className": "ecos-files-viewer__item-title",
                "title": "",
              },
              "ref": null,
              "rendered": "",
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span
                className="ecos-files-viewer__item-modified"
                title="-"
              >
                -
              </span>,
              <div
                className="ecos-files-viewer__item-actions"
              />,
            ],
            "className": "ecos-files-viewer__item-right",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "-",
                "className": "ecos-files-viewer__item-modified",
                "title": "-",
              },
              "ref": null,
              "rendered": "-",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [],
                "className": "ecos-files-viewer__item-actions",
              },
              "ref": null,
              "rendered": Array [],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;
